--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
+*.elc
+*~
+*\#
+.*.swp
+._*
+.DS_Store
+.Trashes*
+.Spotlight-V100*
+.fseventsd*
+*.pdf
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
