trying to profile and see where processing time goes

--- a/nginx-sortable_list.conf
+++ b/nginx-sortable_list.conf
@@ -3,6 +3,9 @@
 #start up uwsgi instance:
 #    sudo uwsgi uwsgi.ini
 #    sudo service nginx restart
+#
+#also be sure to change who nginx runs as in /etc/nginx/nginx.conf 
+#so that the user has access to media (if www-data doesn't)
 
 upstream bottle {
     # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
