--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -10,6 +10,7 @@ master = true
 plugins = python3
 #binary-path = /usr/local/bin/uwsgi
 file = application.py
+processes = 2
 uid = www-data
 gid = www-data
 
