updates to server configs

--- a/nginx-sortable_list.conf
+++ b/nginx-sortable_list.conf
@@ -1,8 +1,17 @@
+#be sure to set the user in the conf file to be one that can access the media you want to serve
 #copy this to /etc/nginx/conf.d/
 #    sudo cp nginx-sortable_list.conf /etc/nginx/conf.d/
 #start up uwsgi instance:
-#    sudo uwsgi uwsgi.ini
+#    uwsgi uwsgi.ini
 #    sudo service nginx restart
+#in a browser, be sure to use whatever you set for servername in this file:
+#    http://127.0.0.1/
+#(not the same as 'localhost')
+#
+#it may be necessary to adjust the user nginx is running as
+#especially if drives or media that you want to use have permissions set:
+#    sudo vi /etc/nginx/nginx.conf 
+
 
 upstream bottle {
     # server unix:///path/to/your/mysite/mysite.sock; # for a file socket
@@ -23,12 +32,12 @@ server {
 
     # Django media
     location /file  {
-        alias /c;  # your project's media files - amend as required
+        alias /;  # your project's media files - amend as required
     }
 
     # Finally, send all non-media requests to the Django server.
     location / {
-        uwsgi_read_timeout 10; 
+        uwsgi_read_timeout 1200; 
         uwsgi_pass  bottle;
         include     /etc/nginx/uwsgi_params; # the uwsgi_params file you installed
     }
