--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,15 +1,16 @@
 [uwsgi]
 #use this to run behind a webserver, like nginx
-#socket = /tmp/uwsgi_socket
-socket = 127.0.0.1:3031
+socket = /tmp/uwsgi_socket
+#socket = 127.0.0.1:3031
 
 #use this to run via uwsgi directly:
 #http = 127.0.0.1:9090
 chdir = /c/public/sortable_list
 master = true
 plugins = python3
+processes = 2
 #binary-path = /usr/local/bin/uwsgi
 file = application.py
-uid = www-data
-gid = www-data
+uid = charles
+gid = charles
 
