minor note for setup

--- a/nginx-sortable_list.conf
+++ b/nginx-sortable_list.conf
@@ -1,4 +1,6 @@
 #be sure to set the user in the conf file to be one that can access the media you want to serve
+#    sudo vi /etc/nginx/nginx.conf
+#
 #copy this to /etc/nginx/conf.d/
 #    sudo cp nginx-sortable_list.conf /etc/nginx/conf.d/
 #start up uwsgi instance:
