--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vuedraggable": "^2.20.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
